Adds TableView and Wires up to LinksViewController
- Adds TableView and connects to outlet
- Puts LinksViewController within NavigationController
- Adds 2 UILabels to Prototype cell and connects to outlets

--- a/ReferralLinks/Base.lproj/Main.storyboard
+++ b/ReferralLinks/Base.lproj/Main.storyboard
@@ -1,13 +1,15 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6211" systemVersion="14A298i" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6254" systemVersion="14B25" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="YgB-2L-VmN">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6204"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6247"/>
+        <capability name="Alignment constraints to the first baseline" minToolsVersion="6.0"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Links View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="LinksViewController" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
@@ -15,11 +17,112 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" allowsSelection="NO" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="9oM-27-ZST">
+                                <rect key="frame" x="0.0" y="0.0" width="584" height="600"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <prototypes>
+                                    <tableViewCell contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="LinkCell" id="zE9-uK-d1Z" customClass="LinkTableViewCell">
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="zE9-uK-d1Z" id="RX4-Mi-sct">
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3YA-EH-NG2">
+                                                    <rect key="frame" x="8" y="11" width="325" height="21"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" constant="429" id="IGw-d3-c7g"/>
+                                                    </constraints>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                    <variation key="default">
+                                                        <mask key="constraints">
+                                                            <exclude reference="IGw-d3-c7g"/>
+                                                        </mask>
+                                                    </variation>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ZWP-Xe-vjT">
+                                                    <rect key="frame" x="376" y="11" width="200" height="21"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" constant="200" id="caA-ku-Okz"/>
+                                                    </constraints>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                    <variation key="default">
+                                                        <mask key="constraints">
+                                                            <exclude reference="caA-ku-Okz"/>
+                                                        </mask>
+                                                    </variation>
+                                                </label>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="3YA-EH-NG2" firstAttribute="centerY" secondItem="RX4-Mi-sct" secondAttribute="centerY" id="2dd-r2-C1y"/>
+                                                <constraint firstItem="3YA-EH-NG2" firstAttribute="baseline" secondItem="ZWP-Xe-vjT" secondAttribute="baseline" id="6ud-h5-5hS"/>
+                                                <constraint firstItem="ZWP-Xe-vjT" firstAttribute="leading" secondItem="3YA-EH-NG2" secondAttribute="trailing" constant="8" symbolic="YES" id="PM7-YC-r9x"/>
+                                                <constraint firstItem="3YA-EH-NG2" firstAttribute="leading" secondItem="RX4-Mi-sct" secondAttribute="leadingMargin" id="f38-6B-CCe"/>
+                                                <constraint firstItem="3YA-EH-NG2" firstAttribute="top" secondItem="RX4-Mi-sct" secondAttribute="topMargin" id="i0V-DG-3df"/>
+                                                <constraint firstItem="3YA-EH-NG2" firstAttribute="firstBaseline" secondItem="ZWP-Xe-vjT" secondAttribute="firstBaseline" id="soW-xJ-ffn"/>
+                                                <constraint firstAttribute="trailingMargin" secondItem="ZWP-Xe-vjT" secondAttribute="trailing" id="ufp-Hv-pjx"/>
+                                            </constraints>
+                                            <variation key="default">
+                                                <mask key="constraints">
+                                                    <exclude reference="2dd-r2-C1y"/>
+                                                    <exclude reference="6ud-h5-5hS"/>
+                                                    <exclude reference="f38-6B-CCe"/>
+                                                    <exclude reference="i0V-DG-3df"/>
+                                                    <exclude reference="soW-xJ-ffn"/>
+                                                    <exclude reference="PM7-YC-r9x"/>
+                                                    <exclude reference="ufp-Hv-pjx"/>
+                                                </mask>
+                                            </variation>
+                                        </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="countLabel" destination="ZWP-Xe-vjT" id="JoZ-5S-0o6"/>
+                                            <outlet property="titleLabel" destination="3YA-EH-NG2" id="Q2d-jr-7xy"/>
+                                        </connections>
+                                    </tableViewCell>
+                                </prototypes>
+                                <connections>
+                                    <outlet property="dataSource" destination="BYZ-38-t0r" id="fcM-mZ-9cc"/>
+                                    <outlet property="delegate" destination="BYZ-38-t0r" id="QqE-bG-M1Q"/>
+                                </connections>
+                            </tableView>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="9oM-27-ZST" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="Jem-DR-0Sd"/>
+                            <constraint firstItem="9oM-27-ZST" firstAttribute="bottom" secondItem="wfy-db-euE" secondAttribute="top" id="cQU-U2-gx1"/>
+                            <constraint firstItem="9oM-27-ZST" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="topMargin" id="mEZ-Gy-Vwm"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="9oM-27-ZST" secondAttribute="trailing" id="mpG-Z2-Bzg"/>
+                        </constraints>
                     </view>
+                    <navigationItem key="navigationItem" id="dGt-hs-ZSi"/>
+                    <connections>
+                        <outlet property="tableView" destination="9oM-27-ZST" id="IjU-LW-uqX"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="1192" y="265"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="H7g-Q3-4v3">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="YgB-2L-VmN" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="0jh-sl-bub">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="Bia-PV-15V"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="MEr-JC-9qh" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="326" y="-428"/>
         </scene>
     </scenes>
 </document>
