--- a/ReferralLinks/Base.lproj/Main.storyboard
+++ b/ReferralLinks/Base.lproj/Main.storyboard
@@ -6,6 +6,51 @@
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
+        <!--Link Landing Page View Controller-->
+        <scene sceneID="4uq-ar-SqI">
+            <objects>
+                <viewController id="dMd-6O-6dk" customClass="LinkLandingPageViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="Tmc-Kp-JLr"/>
+                        <viewControllerLayoutGuide type="bottom" id="SQ7-4c-EAF"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="U0k-AX-FfV">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Referral Link Text" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="trE-8G-5VM">
+                                <rect key="frame" x="0.0" y="120" width="568" height="21"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="21" id="5N7-JP-Uif"/>
+                                    <constraint firstAttribute="height" constant="21" id="OJA-r8-nLf"/>
+                                    <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="21" id="db1-vN-ZfS"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                                <variation key="default">
+                                    <mask key="constraints">
+                                        <exclude reference="OJA-r8-nLf"/>
+                                        <exclude reference="db1-vN-ZfS"/>
+                                    </mask>
+                                </variation>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="trE-8G-5VM" firstAttribute="leading" secondItem="U0k-AX-FfV" secondAttribute="leadingMargin" constant="-16" id="AiL-vv-4Ee"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="trE-8G-5VM" secondAttribute="trailing" constant="16" id="Fts-rs-JZe"/>
+                            <constraint firstItem="trE-8G-5VM" firstAttribute="top" secondItem="Tmc-Kp-JLr" secondAttribute="bottom" constant="56" id="fAx-cn-YGx"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="linkTextLabel" destination="trE-8G-5VM" id="q0s-7Z-AgU"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Rew-bc-bXE" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="800" y="1010"/>
+        </scene>
         <!--Links View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
@@ -112,6 +157,7 @@
                     <connections>
                         <outlet property="tableView" destination="9oM-27-ZST" id="IjU-LW-uqX"/>
                         <segue destination="lv0-hf-bdM" kind="show" identifier="updateLinkViewController" id="5zT-pH-t8G"/>
+                        <segue destination="dMd-6O-6dk" kind="show" identifier="linkLandingViewController" id="mQc-Hf-6pN"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
@@ -310,7 +356,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="nwY-KF-cTR" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1192" y="1041"/>
+            <point key="canvasLocation" x="1569" y="1010"/>
         </scene>
     </scenes>
 </document>
